--- a/.gitignore
+++ b/.gitignore
@@ -36,9 +36,6 @@ build/Release
 node_modules/
 jspm_packages/
 
-# Typescript v1 declaration files
-typings/
-
 # Optional npm cache directory
 .npm
 
@@ -58,4 +55,7 @@ typings/
 .env
 
 # site specefic
+/dist/**
 /.vscode/**
+*.lock
+package-*.json
