--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-send": "^4.1.3",
-    "koa-static": "^4.0.2"
+    "koa-static": "^4.0.2",
+    "mongoose": "^5.0.12"
   },
   "devDependencies": {
     "@types/graphql": "^0.12.7",
@@ -50,6 +51,7 @@
     "@types/koa-router": "^7.0.27",
     "@types/koa-send": "^4.1.1",
     "@types/koa-static": "^4.0.0",
+    "@types/mongoose": "^5.0.7",
     "@types/node": "^9.6.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
