--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
     "graphql-tools": "^2.23.1",
+    "graphql-type-json": "^0.2.0",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.2.0",
