--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ngx-webpack-grande-starter",
-  "version": "2.0.0",
-  "description": "A grande-cup webpack starter for Angular 2+",
+  "name": "inventory-client",
+  "version": "1.0.0",
+  "description": "A game-inventory highly resembles SkyUI 5",
   "scripts": {
     "serve": "cross-env NODE_ENV=development webpack-dev-server --config webpack/w.c.client.spa --hot --inline --progress",
     "build": "cross-env NODE_ENV=production webpack --config webpack/w.c.client.spa --progress --profile --bail",
