--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^10.0.3",
     "autoprefixer": "^8.1.0",
     "clean-webpack-plugin": "^0.1.16",
+    "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.0",
