--- a/client/package.json
+++ b/client/package.json
@@ -1,60 +1,55 @@
 {
-  "name": "inventory-client",
-  "version": "1.0.0",
-  "description": "A game-inventory highly resembles SkyUI 5",
-  "scripts": {
-    "serve": "cross-env NODE_ENV=development webpack-dev-server --config webpack/w.c.client.spa --hot --inline --progress --bail",
-    "build": "cross-env NODE_ENV=production webpack --config webpack/w.c.client.spa --progress --profile --bail",
-    "test": "jest --config jest/j.c.client.js",
-    "test-w": "jest --config jest/j.c.client.js --watch",
-    "test-c": "jest --config jest/j.c.client.js --coverage"
-  },
+  "name": "inventory",
+  "description": "高仿SkyUI 5的Angular物品栏. A game inventory highly resembles SkyUI5",
+  "private": false,
+  "version": "0.1.0",
+  "author": "valorad",
   "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
   "dependencies": {
-    "@angular/animations": "^6.0.0",
-    "@angular/cdk": "^6.0.0",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/material": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
-    "babel-polyfill": "^6.26.0",
+    "@angular-builders/dev-server": "^2.2.2",
+    "@angular/animations": "^6.1.6",
+    "@angular/cdk": "^6.4.6",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
+    "@angular/material": "^6.4.6",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/router": "^6.1.0",
+    "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
-    "rxjs": "^6.1.0",
-    "zone.js": "^0.8.17"
+    "rxjs": "^6.0.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler": "^6.0.0",
-    "@angular/compiler-cli": "^6.0.0",
-    "@ngtools/webpack": "^6.0.0",
-    "@types/node": "^10.0.3",
-    "autoprefixer": "^9.1.0",
-    "clean-webpack-plugin": "^0.1.16",
-    "copy-webpack-plugin": "^4.5.1",
-    "cross-env": "^5.1.3",
-    "css-loader": "^1.0.0",
-    "file-loader": "^1.1.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.0.4",
+    "@angular-builders/custom-webpack": "^2.2.1",
+    "@angular-builders/jest": "^1.1.1",
+    "@angular-devkit/architect": "^0.7.5",
+    "@angular-devkit/build-angular": "^0.7.5",
+    "@angular-devkit/core": "^0.7.5",
+    "@angular/cli": "~6.1.5",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/language-service": "^6.1.0",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
     "jest": "^23.5.0",
-    "jest-preset-angular": "^6.0.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.3",
-    "optimize-css-assets-webpack-plugin": "^5.0.0",
-    "postcss-loader": "^3.0.0",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^7.0.0",
-    "script-ext-html-webpack-plugin": "^2.0.1",
-    "style-loader": "^0.18.2",
-    "typescript": "~2.7.0",
-    "uglifyjs-webpack-plugin": "^1.2.2",
-    "webpack": "^4.16.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.0",
-    "webpack-merge": "^4.1.0"
+    "protractor": "~5.4.0",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
