--- a/server/package.json
+++ b/server/package.json
@@ -25,39 +25,42 @@
   "homepage": "https://github.com/valorad/inventory#readme",
   "dependencies": {
     "@koa/cors": "^2.2.1",
-    "apollo-server-koa": "^1.3.4",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.8.0",
-    "graphql-tools": "^2.23.1",
+    "apollo-server-env": "^2.2.0",
+    "apollo-server-koa": "^2.3.1",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
+    "graphql-tools": "^4.0.3",
     "graphql-type-json": "^0.2.0",
-    "koa": "^2.5.0",
+    "koa": "^2.6.0",
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
-    "koa-send": "^4.1.3",
-    "koa-static": "^4.0.2",
-    "mongoose": "^5.0.12"
+    "koa-send": "^5.0.0",
+    "koa-static": "^5.0.0",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.4.0"
   },
   "devDependencies": {
-    "@types/graphql": "^0.12.7",
-    "@types/jest": "^22.2.2",
-    "@types/koa": "^2.0.44",
+    "@types/graphql": "^14.0.3",
+    "@types/jest": "^23.3.10",
+    "@types/koa": "^2.0.47",
     "@types/koa-bodyparser": "^4.2.0",
     "@types/koa-logger": "^3.1.0",
     "@types/koa-router": "^7.0.27",
     "@types/koa-send": "^4.1.1",
     "@types/koa-static": "^4.0.0",
-    "@types/mongoose": "^5.0.7",
-    "@types/node": "^9.6.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.1",
-    "cross-env": "^5.1.4",
-    "jest": "^22.4.3",
-    "ts-jest": "^22.4.2",
-    "ts-loader": "^4.1.0",
-    "typescript": "^2.8.1",
-    "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-node-externals": "^1.6.0"
+    "@types/mongodb": "^3.1.17",
+    "@types/mongoose": "^5.3.5",
+    "@types/node": "^10.12.17",
+    "clean-webpack-plugin": "^1.0.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "cross-env": "^5.2.0",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.5",
+    "ts-loader": "^5.3.1",
+    "typescript": "^3.2.2",
+    "webpack": "^4.28.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
