--- a/client/angular.json
+++ b/client/angular.json
@@ -54,7 +54,7 @@
           }
         },
         "serve": {
-          "builder": "@angular-builders/dev-server:generic",
+          "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
             "browserTarget": "inventory:build"
           },
